# Apartnetwork

./: Apartnetwork.qmlproject  Apartnetwork.qmlproject.user.c914518  CMakeLists.txt  CMakeLists.txt.user.c914518  README.md  qmlmodules  resources.qrc
assets/: moscow_apartments_2023.csv
content/: App.qml  CMakeLists.txt  InsightCard.qml  LineChart.qml  PredictionPage.qml  ScatterPlot.qml  TrainingPage.qml
docs/: DATASET.md
imports/: CMakeLists.txt
imports/Apartnetwork/: CMakeLists.txt  qmldir
imports/Apartnetwork/designer/: plugin.metainfo
scripts/: generate_moscow_dataset.ps1
src/: apartmentmodeladapter.cpp  apartmentmodeladapter.h  import_qml_plugins.h  main.cpp  predictionviewmodel.cpp  predictionviewmodel.h
src/model/: ActivationFunctions.cpp  ActivationFunctions.h  ApartmentModel.cpp  ApartmentModel.h  DataParser.cpp  DataParser.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h
tests/: apartnetwork_tests.cpp  test_resources.qrc
